@@ -1,0 +1,12 @@
+use ExtUtils::MakeMaker;
+# See lib/ExtUtils/MakeMaker.pm for details of how to influence
+# the contents of the Makefile that is written.
+WriteMakefile(
+    'NAME'              => 'SplashBox',
+    'VERSION_FROM'      => 'SplashBox.pm', # finds $VERSION
+    'EXE_FILES'         => ["bin/splashbox-daemon", "bin/splashbox-parser0", "bin/splashbox-action-creator"],
+    'PREREQ_PM'         => {}, # e.g., Module::Name => 1.1
+    'LIBS'              => [''], # e.g., '-lm'
+    'DEFINE'            => '', # e.g., '-DHAVE_SOMETHING'
+    'INC'               => '', # e.g., '-I/usr/include/other'
+);
