@@ -32,7 +32,7 @@ from dbus.mainloop.glib import DBusGMainLoop
 class DBusBotService(dbus.service.Object):
 
 	bot = aiml.Kernel()
-	aiml_file = './aiml/*.aiml';
+	aiml_file = '/var/lib/splashbox/chat-service/AIML/*.aiml';
 
 	def __init__(self):
 		bus_name = dbus.service.BusName('org.opensplash.chatbot', bus=dbus.SessionBus())
